syntax = "proto3"; //proto3을 사용함

option java_multiple_files = true;
option java_package = "grpc.chameleon";
option java_outer_classname = "ChameleonProto";

// Class 정의
service Chameleon {
  rpc findUserAppVersion (FindUserAppVersionGprcRequest) returns (FindUserAppVersionGrpcResponse); // service 정의
}

message FindUserAppVersionGprcRequest {
  // 숫자 == 필드 번호 (메시지를 직렬화하고 역직렬화할 때 필드를 식별하는 데 사용)
  string userId = 1;
  string shopLoginId = 2;
  string os = 3;
  string shopCode = 4;
}

message FindUserAppVersionGrpcResponse {
  bool result = 1; // false == not found
  string appVersion = 2;
}